# dadophoros-rs

./: Cargo.toml  LICENSE  README.md  SPEC.md  notes.txt
dadophoros-common/: Cargo.toml
dadophoros-common/src/: lib.rs
dadophoros-daemon/: Cargo.toml
dadophoros-daemon/src/: ipc.rs  main.rs  rules.rs  stats.rs
dadophoros-ebpf/: Cargo.toml
dadophoros-ebpf/src/: main.rs
dadophoros-proto/: Cargo.toml
dadophoros-proto/src/: lib.rs
dadophoros-tui/: Cargo.toml
dadophoros-tui/src/: app.rs  main.rs
xtask/: Cargo.toml
xtask/src/: main.rs
