[package]
name = "dadophoros-common"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[features]
default = []
user = ["dep:bytemuck", "dep:aya"]

[dependencies]
bytemuck = { version = "1.16", features = ["derive"], optional = true }
aya = { version = "0.13", optional = true }
