[package]
name = "dadophoros-daemon"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[[bin]]
name = "dadophorosd"
path = "src/main.rs"

[dependencies]
aya = { version = "0.13", features = ["async_tokio"] }
tokio = { version = "1", features = ["rt", "macros", "io-util", "signal", "time", "sync"] }
bytemuck = { version = "1.16", features = ["derive"] }
anyhow = { workspace = true }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
hickory-proto = { version = "0.24", default-features = false }
serde = { version = "1", features = ["derive"] }
toml = { version = "0.8", default-features = false, features = ["parse"] }
toml_edit = "0.22"
notify = { version = "6", default-features = false, features = ["macos_kqueue"] }
dadophoros-common = { path = "../dadophoros-common", features = ["user"] }
dadophoros-proto = { path = "../dadophoros-proto" }

[dev-dependencies]
tempfile = "3"
