[package]
name = "dadophoros-tui"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[[bin]]
name = "dadophoros"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
tokio = { version = "1", features = ["rt", "macros", "io-util", "net", "time", "signal"] }
ratatui = "0.29"
crossterm = { version = "0.28", features = ["event-stream"] }
futures-util = { version = "0.3", default-features = false, features = ["std"] }
dadophoros-proto = { path = "../dadophoros-proto" }
